# swagger.yaml
@@ -1213,6 +1213,28 @@ paths:
             $ref: "#/definitions/ErrorMsg"
 
   /drones/{id}:
+    get:
+      description: Get detail of a drone
+      tags:
+        - drone
+      parameters:
+        - in: path
+          name: id
+          type: string
+          required: true
+      responses:
+        200:
+          description: successful operation
+          schema:
+            $ref: "#/definitions/Drone"
+        400:
+          description: invalid parameters
+          schema:
+            $ref: "#/definitions/ErrorMsg"
+        404:
+          description: drone not found
+          schema:
+            $ref: "#/definitions/ErrorMsg"
     put:
       description: Update a drone's location
       tags:
@@ -1233,6 +1255,62 @@ paths:
           description: successful operation
           schema:
             $ref: "#/definitions/Drone"
+        400:
+          description: invalid parameters
+          schema:
+            $ref: "#/definitions/ErrorMsg"
+        404:
+          description: drone not found
+          schema:
+            $ref: "#/definitions/ErrorMsg"
+
+  /dronePosition/{id}:
+    get:
+      description: Get a list of positions of a drone
+      tags:
+        - drone
+      parameters:
+        - in: path
+          description: id of drone
+          name: id
+          type: string
+          required: true
+        -
+          name: offset
+          in: query
+          description: the search offset
+          required: false
+          type: integer
+        -
+          name: limit
+          in: query
+          description: the search limit
+          required: true
+          type: integer
+      responses:
+        200:
+          description: successful operation
+          schema:
+            type: object
+            properties:
+              total:
+                type: integer
+              items:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: string
+                    droneId:
+                      type: string
+                    lat:
+                      type: number
+                    lng:
+                      type: number
+                    createdAt:
+                      type: string
+                      format: date
         400:
           description: invalid parameters
           schema:
